objects/Terms_And_Conditions_Acceptance__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions__c</fullName>
        <label>Terms And Conditions</label>
        <referenceTo>Terms_And_Conditions__c</referenceTo>
        <relationshipLabel>Terms And Conditions Acceptance</relationshipLabel>
        <relationshipName>Terms_And_Conditions_Acceptance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Terms_And_Conditions_Acceptance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Terms And Conditions Acceptance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Accepted_Date__c</columns>
        <columns>Terms_And_Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCA-{000000}</displayFormat>
        <label>Terms And Conditions Acceptance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms And Conditions Acceptance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>